--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,34 @@
-name: Build, Push to ECR, Deploy to EKS
+name: Deploy to EKS (Production)
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 env:
-  AWS_REGION: us-east-1
-  ECR_REPO_NAME: hello-ecr-repo
-  EKS_CLUSTER: hello-eks-cluster
+  AWS_REGION: ap-south-1
+  ECR_REPO_NAME: java-app
+  EKS_CLUSTER: my-cluster
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   deploy:
+    name: Build and Deploy to Production
     runs-on: ubuntu-latest
 
+    environment:
+      name: production  # 👈 Enables prod-specific secrets and approvals
+
     steps:
-    - name: Checkout code
+    - name: Checkout Code
       uses: actions/checkout@v4
 
-    - name: Set up JDK
+    - name: Set up Java 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Build JAR
+    - name: Build App
       run: mvn clean package
 
     - name: Configure AWS credentials
@@ -36,13 +40,13 @@ jobs:
     - name: Login to Amazon ECR
       uses: aws-actions/amazon-ecr-login@v2
 
-    - name: Build and Push Docker Image
+    - name: Build and Push Docker Image to ECR
       run: |
         IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO_NAME }}:${{ env.IMAGE_TAG }}
         docker build -t $IMAGE_URI .
         docker push $IMAGE_URI
 
-    - name: Update Kubeconfig
+    - name: Update Kubeconfig for EKS
       run: |
         aws eks update-kubeconfig --region $AWS_REGION --name $EKS_CLUSTER
 
