--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,51 @@
-name: Deploy to EKS (Production)
+name: Build and Deploy to EKS
 
 on:
   push:
-    branches: [ "main" ]
-
-env:
-  AWS_REGION: ap-south-1
-  ECR_REPO_NAME: java-app
-  EKS_CLUSTER: my-cluster
-  IMAGE_TAG: ${{ github.sha }}
+    branches:
+      - main
 
 jobs:
-  deploy:
-    name: Build and Deploy to Production
+  build-and-deploy:
     runs-on: ubuntu-latest
 
-    environment:
-      name: production  # 👈 Enables prod-specific secrets and approvals
-
     steps:
-    - name: Checkout Code
+    - name: Checkout repo
       uses: actions/checkout@v4
 
     - name: Set up Java 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v3
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: 17
+        distribution: temurin
 
-    - name: Build App
-      run: mvn clean package
+    - name: Build with Maven
+      run: mvn clean package -DskipTests
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-        aws-region: ${{ env.AWS_REGION }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Login to Amazon ECR
-      uses: aws-actions/amazon-ecr-login@v2
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build and Push Docker Image to ECR
+    - name: Build Docker image
       run: |
-        IMAGE_URI=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO_NAME }}:${{ env.IMAGE_TAG }}
-        docker build -t $IMAGE_URI .
-        docker push $IMAGE_URI
+        docker build -t hello-eks-ecr-app .
+        docker tag hello-eks-ecr-app:latest ${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
 
-    - name: Update Kubeconfig for EKS
+    - name: Push Docker image to ECR
+      run: docker push ${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
+
+    - name: Update kubeconfig for EKS
       run: |
-        aws eks update-kubeconfig --region $AWS_REGION --name $EKS_CLUSTER
+        aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
 
     - name: Deploy to EKS
       run: |
-        sed -i "s|<AWS_ECR_IMAGE_URI>|${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO_NAME }}:${{ env.IMAGE_TAG }}|g" deployment.yml
-        kubectl apply -f deployment.yml
+        kubectl set image deployment/hello-eks-ecr-app hello-eks-ecr-app=${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
+        kubectl rollout status deployment/hello-eks-ecr-app
