--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: production  # ✅ this enables secrets under "production"
 
     steps:
     - name: Checkout repo
@@ -27,7 +28,8 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1  # ✅ Replace with your actual region
+        aws-region: ${{ secrets.AWS_REGION }}
+        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}  # ✅ assuming role if you’re using AWS_ROLE_ARN
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -36,16 +38,17 @@ jobs:
     - name: Build Docker image
       run: |
         docker build -t hello-eks-ecr-app .
-        docker tag hello-eks-ecr-app:latest ${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
+        docker tag hello-eks-ecr-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-eks-ecr-app:latest
 
     - name: Push Docker image to ECR
-      run: docker push ${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
+      run: |
+        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-eks-ecr-app:latest
 
     - name: Update kubeconfig for EKS
       run: |
-        aws eks update-kubeconfig --region us-east-1 --name ${{ secrets.EKS_CLUSTER_NAME }}
+        aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
 
     - name: Deploy to EKS
       run: |
-        kubectl set image deployment/hello-eks-ecr-app hello-eks-ecr-app=${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
+        kubectl set image deployment/hello-eks-ecr-app hello-eks-ecr-app=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-eks-ecr-app:latest
         kubectl rollout status deployment/hello-eks-ecr-app
