--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to EKS
+name: Build and Deploy to EKS - Production
 
 on:
   push:
@@ -8,10 +8,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: production  # ✅ this enables secrets under "production"
+    environment: production
 
     steps:
-    - name: Checkout repo
+    - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Set up Java 17
@@ -20,35 +20,31 @@ jobs:
         java-version: 17
         distribution: temurin
 
-    - name: Build with Maven
+    - name: Build Java project with Maven
       run: mvn clean package -DskipTests
 
-    - name: Configure AWS credentials
+    - name: Configure AWS credentials (IAM User)
       uses: aws-actions/configure-aws-credentials@v2
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}  # ✅ assuming role if you’re using AWS_ROLE_ARN
 
     - name: Login to Amazon ECR
-      id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: Build Docker image
       run: |
         docker build -t hello-eks-ecr-app .
-        docker tag hello-eks-ecr-app:latest ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-eks-ecr-app:latest
+        docker tag hello-eks-ecr-app:latest ${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
 
-    - name: Push Docker image to ECR
-      run: |
-        docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-eks-ecr-app:latest
+    - name: Push Docker image to Amazon ECR
+      run: docker push ${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
 
     - name: Update kubeconfig for EKS
-      run: |
-        aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
+      run: aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
 
     - name: Deploy to EKS
       run: |
-        kubectl set image deployment/hello-eks-ecr-app hello-eks-ecr-app=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/hello-eks-ecr-app:latest
+        kubectl set image deployment/hello-eks-ecr-app hello-eks-ecr-app=${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
         kubectl rollout status deployment/hello-eks-ecr-app
