--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,12 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-region: ap-south-1
+
+    - name: Ensure ECR repository exists
+      run: |
+        aws ecr describe-repositories --repository-names java-app || \
+        aws ecr create-repository --repository-name java-app
 
     - name: Login to Amazon ECR
       uses: aws-actions/amazon-ecr-login@v1
@@ -36,15 +41,15 @@ jobs:
     - name: Build Docker image
       run: |
         docker build -t hello-eks-ecr-app .
-        docker tag hello-eks-ecr-app:latest ${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
+        docker tag hello-eks-ecr-app:latest 202516164458.dkr.ecr.ap-south-1.amazonaws.com/java-app:latest
 
     - name: Push Docker image to Amazon ECR
-      run: docker push ${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
+      run: docker push 202516164458.dkr.ecr.ap-south-1.amazonaws.com/java-app:latest
 
     - name: Update kubeconfig for EKS
-      run: aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name ${{ secrets.EKS_CLUSTER_NAME }}
+      run: aws eks update-kubeconfig --region ap-south-1 --name ${{ secrets.EKS_CLUSTER_NAME }}
 
     - name: Deploy to EKS
       run: |
-        kubectl set image deployment/hello-eks-ecr-app hello-eks-ecr-app=${{ secrets.ECR_REGISTRY }}/hello-eks-ecr-app:latest
+        kubectl set image deployment/hello-eks-ecr-app hello-eks-ecr-app=202516164458.dkr.ecr.ap-south-1.amazonaws.com/java-app:latest
         kubectl rollout status deployment/hello-eks-ecr-app
