--- a/deployment.yml
+++ b/deployment.yml
@@ -1,31 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: hello-deployment
+  name: hello-eks-ecr-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hello
+      app: hello-eks-ecr-app
   template:
     metadata:
       labels:
-        app: hello
+        app: hello-eks-ecr-app
     spec:
       containers:
-      - name: hello-container
+      - name: hello-eks-ecr-app
         image: 202516164458.dkr.ecr.ap-south-1.amazonaws.com/java-app:latest
         ports:
         - containerPort: 8080
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: hello-service
-spec:
-  selector:
-    app: hello
-  ports:
-  - port: 80
-    targetPort: 8080
-  type: LoadBalancer
